--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,8 @@
-import('Matrix') 
-useDynLib(HierFabs, .registration=TRUE)
+S3method(predict,HierFabs)
+S3method(print,HierFabs)
 exportPattern("^[[:alpha:]]+")
-S3method(predict, HierFabs)
+export(HierFabs)
+import('Matrix') 
+importFrom(methods,as)
+importFrom(Matrix,sparseMatrix)
 useDynLib(HierFabs, .registration = TRUE)
