--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(HierFabs)
 import('Matrix') 
 importFrom(methods,as)
 importFrom(Matrix,sparseMatrix)
+importFrom(Matrix,colSums)
 useDynLib(HierFabs, .registration = TRUE)
