--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,6 @@ Imports: Matrix, methods
 Repository: github
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+LazyDataCompression:xz
+RoxygenNote: 7.1.2
 NeedsCompilation: yes
