--- a/inst/pkgdown.yml
+++ b/inst/pkgdown.yml
@@ -2,8 +2,10 @@ pandoc: '2.18'
 pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
+  HierFabs.GGLM: HierFabs.GGLM.html
+  HierFabs.GoxGE: HierFabs.GoxGE.html
   HierFabs: HierFabs.html
-last_built: 2022-10-21T12:53Z
+last_built: 2022-10-21T13:01Z
 urls:
   reference: https://github.com/XiaoZhangryy/HierFabs/reference
   article: https://github.com/XiaoZhangryy/HierFabs/articles
